examples/test/testpolicy8829.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8829
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key32: value3
      key38: value14
      key20: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value22
      podSelector:
        matchLabels:
          key5: value46
